# board_backend

./: pyproject.toml  readme.md
app/: dependencies.py  main.py
app/core/: config.py  db.py
app/crud/: crud.py
app/resources/: strings.py
app/routers/: data.py  slides.py  users.py
app/structures/: models.py  schemas.py
app/utilities/: strings.py
services/: img_helpers.py
static/: upload_page.html
