[tool.poetry]
name = "p1_be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.39"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
